[package]
name = "skiff"
version = "0.1.0"
edition = "2021"
authors = ["James Seeman"]
keyboards = ["raft", "sled"]


[dependencies]
tokio-stream = "0.1.16"
tokio = { version = "1.39.2", features = ["full"] }
anyhow = "1.0.86"
thiserror = "1.0"
sled = "0.34.7"
tonic = "0.12.1"
prost = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
futures = "0.3.30"
tower = "0.5.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[build-dependencies]
anyhow = "1.0.86"
tonic-build = "0.12"

[dev-dependencies]
serial_test = "3.1.1"
