[package]
name = "skiff-rs"
version = "0.1.1"
edition = "2021"
authors = ["James Seeman"]
description = "An embedded Raft consensus library backed by sled"
license = "MIT"
repository = "https://github.com/jamesseeman/skiff"
readme = "README.md"
keywords = ["raft", "consensus", "distributed", "sled", "kv"]
categories = ["database-implementations", "network-programming"]

# docs.rs doesn't have protoc installed; enable the docs-rs feature to
# compile protoc from source via protobuf-src when building there.
[features]
docs-rs = ["dep:protobuf-src"]

[package.metadata.docs.rs]
features = ["docs-rs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio-stream = "0.1.16"
tokio = { version = "1.39.2", features = ["full"] }
thiserror = "1.0"
sled = "0.34.7"
tonic = "0.12.1"
prost = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"
protobuf-src = { version = "1", optional = true }

[dev-dependencies]
serial_test = "3.1.1"
